--- a/SpaceRemoveApp/package.json
+++ b/SpaceRemoveApp/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "walk": "^2.3.9"
+    "walk": "^2.3.9",
     "vows": "^0.8.1"
   }
 }
