--- a/SpaceRemoveApp/package.json
+++ b/SpaceRemoveApp/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "walk": "^2.3.9",
-    "vows": "^0.8.1"
+    "vows": "^0.8.1",
+    "colors": "^1.1.2"
   }
 }
